--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,10 +91,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Add VM to known hosts
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ matrix.vm_ip }}" >> ~/.ssh/known_hosts 2>/dev/null || true
 
       - name: Wait for VM SSH to be ready
