--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,19 +91,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure SSH key
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Add VM to known hosts
         run: |
           mkdir -p ~/.ssh
+          printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ matrix.vm_ip }}" >> ~/.ssh/known_hosts 2>/dev/null || true
 
       - name: Wait for VM SSH to be ready
         run: |
           for i in $(seq 1 20); do
-            ssh -o ConnectTimeout=5 -o StrictHostKeyChecking=no \
+            ssh -i ~/.ssh/id_rsa -o ConnectTimeout=5 -o StrictHostKeyChecking=no \
               azureuser@${{ matrix.vm_ip }} "echo ready" && break
             echo "Attempt $i: SSH not ready yet, retrying in 15s..."
             sleep 15
@@ -111,7 +108,7 @@ jobs:
 
       - name: Copy app files to VM
         run: |
-          scp -o StrictHostKeyChecking=no \
+          scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no \
             upstream_streamlit.py \
             upstream_integration.py \
             requirements.txt \
@@ -119,7 +116,7 @@ jobs:
 
       - name: Install dependencies & restart service
         run: |
-          ssh -o StrictHostKeyChecking=no azureuser@${{ matrix.vm_ip }} << 'REMOTE'
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no azureuser@${{ matrix.vm_ip }} << 'REMOTE'
             set -e
             echo "==> Installing Python dependencies..."
             /opt/upstream/venv/bin/pip install -r /opt/upstream/app/requirements.txt --quiet
